--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <span>Москва. Это в Украине</span><input type="radio" name="questionOne">
       <span>Киев. Это в Белоруссии</span><input type="radio" name="questionOne">
       <span>Нур-Султан. Это в Казахстане</span><input type="radio" name="questionOne">
+      <p class="rightAnswerOne">✔️ Минск. Это в России! И, возможно, за все 10 сезонов это самая противоречивая шутка для постсоветских зрителей.</p>
     </div>
 
     <div class="question">
@@ -35,6 +36,7 @@
       <span>Его отец ушел из семьи к дворецкому</span><input type="radio" name="questionTwo" id="answerTwo">
       <span>Чендлер увидел, как отец тайно изменяет своей жене с другой женщиной</span><input type="radio" name="questionTwo">
       <span>В возрасте семи лет Чендлер случайно узнал, что он — приемный ребенок</span><input type="radio" name="questionTwo">
+      <p class="rightAnswerTwo">✔️ Его отец ушел из семьи к дворецкому! Причем о разводе родителей Чендлер узнал прямо в День благодарения — потому он терпеть не может этот праздник.</p>
     </div>
 
     <div class="question">
@@ -44,6 +46,7 @@
       <span>Об этот попросила Фиби</span><input type="radio" name="questionThree">
       <span>Хотел напугать Чендлера</span><input type="radio" name="questionThree" id="answerThree">
       <span>Хотел проверить, пролезет ли в индейку его голова</span><input type="radio" name="questionThree">
+      <p class="rightAnswerThree">✔️ Хотел напугать Чендлера! И у него получилось! В той же серии индейку на голову надела и Моника. Сыгравшая ее Кортни Кокс рассказывала, что очень хотела, чтобы это была настоящая индейка, но отдел реквизита сделал бутафорские тушки.</p>
     </div>
 
     <div class="question">
@@ -53,20 +56,22 @@
       <span>Мизинца на ноге. Его отрубила Моника</span><input type="radio" name="questionFour" id="answerFour">
       <span>Мизинца на руке. Хотел быть таким, как Норман в «Четырех комнатах»</span><input type="radio" name="questionFour">
       <span>Мочки уха. Молодость, серьги, 1980-е — всякое бывало</span><input type="radio" name="questionFour">
+      <p class="rightAnswerFour">✔️Мизинца на ноге. Его отрубила Моника! Как ни странно, это правда. Моника хотела отомстить Чендлеру за то, что он назвал ее толстой, но ситуация вышла из-под контроля. Спустя несколько лет Моника в качестве извинений надела на голову индейку. Ту самую, из прошлого вопроса.</p>
     </div>
 
     <div class="question">
       <label>5. Друзья не только веселились, но и успевали работать. Кстати, кем работал Чендлер?</label>
       <img src="assets/img/quest5.jpg" alt="photo">
-      <span>Экскурсовод</span><input type="radio" name="questionFive">
-      <span>Менеджер по закупкам</span><input type="radio" name="questionFive" id="answerFive">
-      <span>Переводчик-переводник</span><input type="radio" name="questionFive">
-      <span>Никто не знает!</span><input type="radio" name="questionFive">
+      <span>А. Экскурсовод</span><input type="radio" name="questionFive">
+      <span>Б. Менеджер по закупкам</span><input type="radio" name="questionFive" id="answerFive">
+      <span>В. Переводчик-переводник</span><input type="radio" name="questionFive">
+      <span>Г. Никто не знает!</span><input type="radio" name="questionFive">
+      <p class="rightAnswerFive">✔️Менеджер по закупкам! Чендлер работал менеджером по закупкам, специализирующимся на статистическом анализе и конфигурации данных. Правда, под конец сериала он решил сменить профессию и ушел в рекламу — младшим копирайтером.</p>
     </div>
 
     <button type="submit" class="btn">Отправить ответы</button>
 
-    <p id="show"></p>
+    <p class="show"></p>
 
     </form>
 
