--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
     <div class="question">
       <label>5. Друзья не только веселились, но и успевали работать. Кстати, кем работал Чендлер?</label>
       <img src="assets/img/quest5.jpg" alt="photo">
-      <span>А. Экскурсовод</span><input type="radio" name="questionFive">
-      <span>Б. Менеджер по закупкам</span><input type="radio" name="questionFive" id="answerFive">
-      <span>В. Переводчик-переводник</span><input type="radio" name="questionFive">
-      <span>Г. Никто не знает!</span><input type="radio" name="questionFive">
+      <span>Экскурсовод</span><input type="radio" name="questionFive">
+      <span>Менеджер по закупкам</span><input type="radio" name="questionFive" id="answerFive">
+      <span>Переводчик-переводник</span><input type="radio" name="questionFive">
+      <span>Никто не знает!</span><input type="radio" name="questionFive">
       <p class="rightAnswerFive">✔️Менеджер по закупкам! Чендлер работал менеджером по закупкам, специализирующимся на статистическом анализе и конфигурации данных. Правда, под конец сериала он решил сменить профессию и ушел в рекламу — младшим копирайтером.</p>
     </div>
 
